SPL/SPLParser.py
# Generated from SPL.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class SPLParser ( Parser ):

    grammarFileName = "SPL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'search'", "'replace'", "'stats'", "'avg'", 
                     "'max'", "'min'", "'as'", "'by'", "'in'", "'over'", 
                     "'with'", "'|'", "'('", "')'", "'\"'", "','", "'='", 
                     "'!='", "'<'", "'>'", "'<='", "'>='" ]

    symbolicNames = [ "<INVALID>", "Search", "Replace", "Stats", "Avg", 
                      "Max", "Min", "As", "By", "In", "Over", "With", "Vbar", 
                      "LParen", "RParen", "DQuotes", "COMMA", "Eq", "Neq", 
                      "Lt", "Gt", "Le", "Ge", "And", "Or", "Not", "UnquotedValue", 
                      "WcUnquotedValue", "QuotedString", "WcQuotedString", 
                      "WS" ]

    RULE_pipeline = 0
    RULE_cmd = 1
    RULE_stats = 2
    RULE_statsAggTerm = 3
    RULE_statsAggTermList = 4
    RULE_statsFunc = 5
    RULE_replace = 6
    RULE_replaceExpr = 7
    RULE_replaceExprList = 8
    RULE_headSearch = 9
    RULE_search = 10
    RULE_searchExpr = 11
    RULE_wcValue = 12
    RULE_wcField = 13
    RULE_value = 14
    RULE_field = 15
    RULE_fieldList = 16
    RULE_cmpOp = 17

    ruleNames =  [ "pipeline", "cmd", "stats", "statsAggTerm", "statsAggTermList", 
                   "statsFunc", "replace", "replaceExpr", "replaceExprList", 
                   "headSearch", "search", "searchExpr", "wcValue", "wcField", 
                   "value", "field", "fieldList", "cmpOp" ]

    EOF = Token.EOF
    Search=1
    Replace=2
    Stats=3
    Avg=4
    Max=5
    Min=6
    As=7
    By=8
    In=9
    Over=10
    With=11
    Vbar=12
    LParen=13
    RParen=14
    DQuotes=15
    COMMA=16
    Eq=17
    Neq=18
    Lt=19
    Gt=20
    Le=21
    Ge=22
    And=23
    Or=24
    Not=25
    UnquotedValue=26
    WcUnquotedValue=27
    QuotedString=28
    WcQuotedString=29
    WS=30

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class PipelineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def headSearch(self):
            return self.getTypedRuleContext(SPLParser.HeadSearchContext,0)


        def Vbar(self, i:int=None):
            if i is None:
                return self.getTokens(SPLParser.Vbar)
            else:
                return self.getToken(SPLParser.Vbar, i)

        def cmd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SPLParser.CmdContext)
            else:
                return self.getTypedRuleContext(SPLParser.CmdContext,i)


        def getRuleIndex(self):
            return SPLParser.RULE_pipeline

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPipeline" ):
                listener.enterPipeline(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPipeline" ):
                listener.exitPipeline(self)




    def pipeline(self):

        localctx = SPLParser.PipelineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_pipeline)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.headSearch()
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SPLParser.Vbar:
                self.state = 37
                self.match(SPLParser.Vbar)
                self.state = 38
                self.cmd()
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def replace(self):
            return self.getTypedRuleContext(SPLParser.ReplaceContext,0)


        def stats(self):
            return self.getTypedRuleContext(SPLParser.StatsContext,0)


        def search(self):
            return self.getTypedRuleContext(SPLParser.SearchContext,0)


        def getRuleIndex(self):
            return SPLParser.RULE_cmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmd" ):
                listener.enterCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmd" ):
                listener.exitCmd(self)




    def cmd(self):

        localctx = SPLParser.CmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_cmd)
        try:
            self.state = 47
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SPLParser.Replace]:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.replace()
                pass
            elif token in [SPLParser.Stats]:
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.stats()
                pass
            elif token in [SPLParser.Search]:
                self.enterOuterAlt(localctx, 3)
                self.state = 46
                self.search()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Stats(self):
            return self.getToken(SPLParser.Stats, 0)

        def statsAggTermList(self):
            return self.getTypedRuleContext(SPLParser.StatsAggTermListContext,0)


        def By(self):
            return self.getToken(SPLParser.By, 0)

        def fieldList(self):
            return self.getTypedRuleContext(SPLParser.FieldListContext,0)


        def getRuleIndex(self):
            return SPLParser.RULE_stats

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStats" ):
                listener.enterStats(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStats" ):
                listener.exitStats(self)




    def stats(self):

        localctx = SPLParser.StatsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stats)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(SPLParser.Stats)
            self.state = 50
            self.statsAggTermList()
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SPLParser.By:
                self.state = 51
                self.match(SPLParser.By)
                self.state = 52
                self.fieldList()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatsAggTermContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.func_field = None # FieldContext
            self.as_field = None # FieldContext

        def statsFunc(self):
            return self.getTypedRuleContext(SPLParser.StatsFuncContext,0)


        def LParen(self):
            return self.getToken(SPLParser.LParen, 0)

        def RParen(self):
            return self.getToken(SPLParser.RParen, 0)

        def field(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SPLParser.FieldContext)
            else:
                return self.getTypedRuleContext(SPLParser.FieldContext,i)


        def As(self):
            return self.getToken(SPLParser.As, 0)

        def getRuleIndex(self):
            return SPLParser.RULE_statsAggTerm

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatsAggTerm" ):
                listener.enterStatsAggTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatsAggTerm" ):
                listener.exitStatsAggTerm(self)




    def statsAggTerm(self):

        localctx = SPLParser.StatsAggTermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statsAggTerm)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.statsFunc()
            self.state = 56
            self.match(SPLParser.LParen)
            self.state = 57
            localctx.func_field = self.field()
            self.state = 58
            self.match(SPLParser.RParen)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SPLParser.As:
                self.state = 59
                self.match(SPLParser.As)
                self.state = 60
                localctx.as_field = self.field()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatsAggTermListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statsAggTerm(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SPLParser.StatsAggTermContext)
            else:
                return self.getTypedRuleContext(SPLParser.StatsAggTermContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SPLParser.COMMA)
            else:
                return self.getToken(SPLParser.COMMA, i)

        def getRuleIndex(self):
            return SPLParser.RULE_statsAggTermList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatsAggTermList" ):
                listener.enterStatsAggTermList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatsAggTermList" ):
                listener.exitStatsAggTermList(self)




    def statsAggTermList(self):

        localctx = SPLParser.StatsAggTermListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statsAggTermList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.statsAggTerm()
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SPLParser.Avg) | (1 << SPLParser.Max) | (1 << SPLParser.Min) | (1 << SPLParser.COMMA))) != 0):
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==SPLParser.COMMA:
                    self.state = 64
                    self.match(SPLParser.COMMA)


                self.state = 67
                self.statsAggTerm()
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatsFuncContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Avg(self):
            return self.getToken(SPLParser.Avg, 0)

        def Max(self):
            return self.getToken(SPLParser.Max, 0)

        def Min(self):
            return self.getToken(SPLParser.Min, 0)

        def getRuleIndex(self):
            return SPLParser.RULE_statsFunc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatsFunc" ):
                listener.enterStatsFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatsFunc" ):
                listener.exitStatsFunc(self)




    def statsFunc(self):

        localctx = SPLParser.StatsFuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_statsFunc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SPLParser.Avg) | (1 << SPLParser.Max) | (1 << SPLParser.Min))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReplaceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Replace(self):
            return self.getToken(SPLParser.Replace, 0)

        def replaceExprList(self):
            return self.getTypedRuleContext(SPLParser.ReplaceExprListContext,0)


        def In(self):
            return self.getToken(SPLParser.In, 0)

        def fieldList(self):
            return self.getTypedRuleContext(SPLParser.FieldListContext,0)


        def getRuleIndex(self):
            return SPLParser.RULE_replace

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReplace" ):
                listener.enterReplace(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReplace" ):
                listener.exitReplace(self)




    def replace(self):

        localctx = SPLParser.ReplaceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_replace)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(SPLParser.Replace)
            self.state = 76
            self.replaceExprList()
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SPLParser.In:
                self.state = 77
                self.match(SPLParser.In)
                self.state = 78
                self.fieldList()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReplaceExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.old_val = None # WcValueContext
            self.new_val = None # WcValueContext

        def With(self):
            return self.getToken(SPLParser.With, 0)

        def wcValue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SPLParser.WcValueContext)
            else:
                return self.getTypedRuleContext(SPLParser.WcValueContext,i)


        def getRuleIndex(self):
            return SPLParser.RULE_replaceExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReplaceExpr" ):
                listener.enterReplaceExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReplaceExpr" ):
                listener.exitReplaceExpr(self)




    def replaceExpr(self):

        localctx = SPLParser.ReplaceExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_replaceExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            localctx.old_val = self.wcValue()
            self.state = 82
            self.match(SPLParser.With)
            self.state = 83
            localctx.new_val = self.wcValue()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReplaceExprListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def replaceExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SPLParser.ReplaceExprContext)
            else:
                return self.getTypedRuleContext(SPLParser.ReplaceExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SPLParser.COMMA)
            else:
                return self.getToken(SPLParser.COMMA, i)

        def getRuleIndex(self):
            return SPLParser.RULE_replaceExprList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReplaceExprList" ):
                listener.enterReplaceExprList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReplaceExprList" ):
                listener.exitReplaceExprList(self)




    def replaceExprList(self):

        localctx = SPLParser.ReplaceExprListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_replaceExprList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.replaceExpr()
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SPLParser.COMMA) | (1 << SPLParser.UnquotedValue) | (1 << SPLParser.WcUnquotedValue) | (1 << SPLParser.QuotedString) | (1 << SPLParser.WcQuotedString))) != 0):
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==SPLParser.COMMA:
                    self.state = 86
                    self.match(SPLParser.COMMA)


                self.state = 89
                self.replaceExpr()
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeadSearchContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Search(self):
            return self.getToken(SPLParser.Search, 0)

        def searchExpr(self):
            return self.getTypedRuleContext(SPLParser.SearchExprContext,0)


        def getRuleIndex(self):
            return SPLParser.RULE_headSearch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeadSearch" ):
                listener.enterHeadSearch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeadSearch" ):
                listener.exitHeadSearch(self)




    def headSearch(self):

        localctx = SPLParser.HeadSearchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_headSearch)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SPLParser.Search:
                self.state = 95
                self.match(SPLParser.Search)


            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SPLParser.LParen) | (1 << SPLParser.Not) | (1 << SPLParser.UnquotedValue) | (1 << SPLParser.WcUnquotedValue) | (1 << SPLParser.QuotedString) | (1 << SPLParser.WcQuotedString))) != 0):
                self.state = 98
                self.searchExpr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SearchContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Search(self):
            return self.getToken(SPLParser.Search, 0)

        def searchExpr(self):
            return self.getTypedRuleContext(SPLParser.SearchExprContext,0)


        def getRuleIndex(self):
            return SPLParser.RULE_search

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSearch" ):
                listener.enterSearch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSearch" ):
                listener.exitSearch(self)




    def search(self):

        localctx = SPLParser.SearchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_search)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(SPLParser.Search)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SPLParser.LParen) | (1 << SPLParser.Not) | (1 << SPLParser.UnquotedValue) | (1 << SPLParser.WcUnquotedValue) | (1 << SPLParser.QuotedString) | (1 << SPLParser.WcQuotedString))) != 0):
                self.state = 102
                self.searchExpr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SearchExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SPLParser.RULE_searchExpr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class AndSearchContext(SearchExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SPLParser.SearchExprContext
            super().__init__(parser)
            self.left = None # SearchExprContext
            self.right = None # SearchExprContext
            self.copyFrom(ctx)

        def searchExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SPLParser.SearchExprContext)
            else:
                return self.getTypedRuleContext(SPLParser.SearchExprContext,i)

        def And(self):
            return self.getToken(SPLParser.And, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAndSearch" ):
                listener.enterAndSearch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAndSearch" ):
                listener.exitAndSearch(self)


    class FieldCmpSearchContext(SearchExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SPLParser.SearchExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def field(self):
            return self.getTypedRuleContext(SPLParser.FieldContext,0)

        def cmpOp(self):
            return self.getTypedRuleContext(SPLParser.CmpOpContext,0)

        def wcValue(self):
            return self.getTypedRuleContext(SPLParser.WcValueContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFieldCmpSearch" ):
                listener.enterFieldCmpSearch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFieldCmpSearch" ):
                listener.exitFieldCmpSearch(self)


    class NotSearchContext(SearchExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SPLParser.SearchExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Not(self):
            return self.getToken(SPLParser.Not, 0)
        def searchExpr(self):
            return self.getTypedRuleContext(SPLParser.SearchExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNotSearch" ):
                listener.enterNotSearch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNotSearch" ):
                listener.exitNotSearch(self)


    class FullTextSearchContext(SearchExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SPLParser.SearchExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def wcValue(self):
            return self.getTypedRuleContext(SPLParser.WcValueContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFullTextSearch" ):
                listener.enterFullTextSearch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFullTextSearch" ):
                listener.exitFullTextSearch(self)


    class OrSearchContext(SearchExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SPLParser.SearchExprContext
            super().__init__(parser)
            self.left = None # SearchExprContext
            self.right = None # SearchExprContext
            self.copyFrom(ctx)

        def Or(self):
            return self.getToken(SPLParser.Or, 0)
        def searchExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SPLParser.SearchExprContext)
            else:
                return self.getTypedRuleContext(SPLParser.SearchExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrSearch" ):
                listener.enterOrSearch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrSearch" ):
                listener.exitOrSearch(self)


    class ParenSearchContext(SearchExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SPLParser.SearchExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LParen(self):
            return self.getToken(SPLParser.LParen, 0)
        def searchExpr(self):
            return self.getTypedRuleContext(SPLParser.SearchExprContext,0)

        def RParen(self):
            return self.getToken(SPLParser.RParen, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParenSearch" ):
                listener.enterParenSearch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParenSearch" ):
                listener.exitParenSearch(self)



    def searchExpr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SPLParser.SearchExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 22
        self.enterRecursionRule(localctx, 22, self.RULE_searchExpr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                localctx = SPLParser.NotSearchContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 106
                self.match(SPLParser.Not)
                self.state = 107
                self.searchExpr(6)
                pass

            elif la_ == 2:
                localctx = SPLParser.ParenSearchContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 108
                self.match(SPLParser.LParen)
                self.state = 109
                self.searchExpr(0)
                self.state = 110
                self.match(SPLParser.RParen)
                pass

            elif la_ == 3:
                localctx = SPLParser.FieldCmpSearchContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 112
                self.field()
                self.state = 113
                self.cmpOp()
                self.state = 114
                self.wcValue()
                pass

            elif la_ == 4:
                localctx = SPLParser.FullTextSearchContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 116
                self.wcValue()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 129
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,15,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 127
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
                    if la_ == 1:
                        localctx = SPLParser.AndSearchContext(self, SPLParser.SearchExprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_searchExpr)
                        self.state = 119
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 121
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==SPLParser.And:
                            self.state = 120
                            self.match(SPLParser.And)


                        self.state = 123
                        localctx.right = self.searchExpr(6)
                        pass

                    elif la_ == 2:
                        localctx = SPLParser.OrSearchContext(self, SPLParser.SearchExprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_searchExpr)
                        self.state = 124
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 125
                        self.match(SPLParser.Or)
                        self.state = 126
                        localctx.right = self.searchExpr(5)
                        pass

             
                self.state = 131
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class WcValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self):
            return self.getTypedRuleContext(SPLParser.ValueContext,0)


        def WcUnquotedValue(self):
            return self.getToken(SPLParser.WcUnquotedValue, 0)

        def WcQuotedString(self):
            return self.getToken(SPLParser.WcQuotedString, 0)

        def getRuleIndex(self):
            return SPLParser.RULE_wcValue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWcValue" ):
                listener.enterWcValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWcValue" ):
                listener.exitWcValue(self)




    def wcValue(self):
